users are now able to create keys and delete hosts
